# PETAL

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  start.sh  temp.py  testcase.txt
.github/workflows/: testing.yaml
marimo/: compiled_files.npz  encode_dataset.py  extract_content.py  infer_pages.py  infered_pages_latest.json  pdf_retriever_embedding.py  populate_db.py  rag_pdf_pipeline.py
marimo/__marimo__/session/: pdf_retriever_embedding.py.json  populate_db.py.json
src/: benchmark.py  graph.py  main.py  server.py
src/agent/: clarify_query.py  generate_answer.py  geocontext_retriever.py  intent_router.py
src/modelling/: PydanticStreamOutputParser.py  structured_output.py  utils.py
src/provider/: GeoSessionProvider.py  GraphProvider.py  ToolProvider.py
src/storage/: memories.py  update_memories.py
src/tool/: geodata.py
tests/: test_pydantic_stream_output_parser.py  test_reduce_missing_attributes.py  test_router_output.py
