[project]
name = "petal"
version = "0.1.0"
description = "PETAL is an agentic LLM developed to assist users into the energy planning of their municipality"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.18",
    "fastapi[standard]>=0.115.12",
    "langchain-core>=0.3.60",
    "langchain-ollama>=0.3.3",
    "langgraph>=0.4.5",
    "pydantic>=2.11.4",
    "pytest>=8.3.5",
    "scipy>=1.15.3",
    "sentence-transformers>=4.1.0",
    "shapely>=2.1.1",
    "sse-starlette>=2.3.5",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
pythonpath = ["."]
