[project]
name = "petal"
version = "0.1.0"
description = "PETAL is an agentic LLM developed to assist users into the energy planning of their municipality"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.18",
    "fastapi[standard]>=0.115.12",
    "langchain-core>=0.3.60",
    "langchain-ollama>=0.3.3",
    "langgraph>=0.4.5",
    "pydantic>=2.11.4",
    "pytest>=8.3.5",
    "scipy>=1.15.3",
    "sentence-transformers>=4.1.0",
    "shapely>=2.1.1",
    "sse-starlette>=2.3.5",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers" }

[dependency-groups]
dev = [
    "accelerate>=1.7.0",
    "ipython>=9.2.0",
    "langchain>=0.3.25",
    "marimo>=0.13.15",
    "numpy>=2.2.6",
    "pdf2image>=1.17.0",
    "pdfminer>=20191125",
    "pdfminer-six>=20250506",
    "qwen-vl-utils[decord]==0.0.8",
    "redis>=6.2.0",
    "torchvision>=0.22.0",
    "transformers>=4.52.3",
]
